agrege el cuarto ejercicio

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS/3-cadenaDeTexto.js"></script>
+    <script src="./JS/4-numeros.js"></script>
 </body>
 </html>
