agrege el ejercicio 7

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS/6-piramide.js"></script>
+    <script src="./JS/7-piramideInversa.js"></script>
 </body>
 </html>
