--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS/9-1al500Multiplos.js"></script>
+    <script src="./JS/10-tabla.js"></script>
 </body>
 </html>
