agrege el ejercicio 14

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS/12-numeroRandom.js"></script>
+    <script src="./JS/14-guionLetra.js"></script>
 </body>
 </html>
