agrege los ejercicios 15 y 16 y corregi la difinicion de algunas variables de los ejercicios anteriores

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./JS/14-guionLetra.js"></script>
+    <script src="./JS/16-textoReves.js"></script>
 </body>
 </html>
